--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link  href="https://xcastr0.github.io/testandores/style.css" rel="stylesheet">
 <!-- Normalize CSS-->
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
-
+<link  href="https://xcastr0.github.io/testandores/style.css" rel="stylesheet" />
 
 <!-- estilo customizado-->
 <link rel="stylesheet" type="text/css" href="css/estilo.css">
