--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Museu Nacional</title>
-<link  href="https://xcastr0.github.io/testandores/style.css" rel="stylesheet" />
+<link  href="https://xcastr0.github.io/testandores/style.css" rel="stylesheet" >
 <!-- Normalize CSS-->
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link  href="https://xcastr0.github.io/testandores/normalize" rel="stylesheet" />
